cf.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Per account setup
Parameters:
  DeveloperRoleUsers:
    Type: CommaDelimitedList
    Default: 'arn:aws:iam::587154807377:user/aws-global-Aries-8ZQ7XEE9E8S'
  DeployRoleUsers:
    Type: CommaDelimitedList
    Default: 'arn:aws:iam::587154807377:user/aws-global-Pipe-M2SBVNYV8UGY'
Resources:
  AssumableDeployRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - !Ref DeployPolicy
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Ref DeployRoleUsers
            Action:
              - sts:AssumeRole
  DeployPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action:
          - 'apigateway:DELETE'
          - 'apigateway:GET'
          - 'apigateway:PATCH'
          - 'apigateway:POST'
          - 'apigateway:PUT'
          - 'cloudformation:*'
          - 'dynamodb:CreateTable'
          - 'dynamodb:DeleteItem'
          - 'dynamodb:DescribeContinuousBackups'
          - 'dynamodb:DescribeTable'
          - 'dynamodb:GetItem'
          - 'dynamodb:ListTables'
          - 'dynamodb:PutItem'
          - 'dynamodb:Query'
          - 'dynamodb:TagResource'
          - 'dynamodb:UntagResource'
          - 'dynamodb:UpdateContinuousBackups'
          - 'dynamodb:UpdateTable'
          - 'dynamodb:DeleteTable'
          - 'iam:AttachRolePolicy'
          - 'iam:CreateRole'
          - 'iam:DeleteRole'
          - 'iam:DeleteRolePolicy'
          - 'iam:DetachRolePolicy'
          - 'iam:GetRole'
          - 'iam:PassRole'
          - 'iam:PutRolePolicy'
          - 'kms:Decrypt'
          - 'kms:DescribeKey'
          - 'kms:Encrypt'
          - 'kms:CreateGrant'
          - 'kms:ListGrants'
          - 'kms:RevokeGrant'
          - 'kms:ReEncrypt*'
          - 'kms:GenerateDataKey*'
          - 'lambda:AddPermission'
          - 'lambda:CreateFunction'
          - 'lambda:DeleteFunction'
          - 'lambda:GetFunctionConfiguration'
          - 'lambda:InvokeFunction'
          - 'lambda:ListTags'
          - 'lambda:RemovePermission'
          - 'lambda:TagResource'
          - 'lambda:UntagResource'
          - 'lambda:UpdateFunctionCode'
          - 'lambda:UpdateFunctionConfiguration'
          - 'lambda:GetEventSourceMapping'
          - 'lambda:CreateEventSourceMapping'
          - 'lambda:DeleteEventSourceMapping'
          - 'events:DescribeRule'
          - 'events:PutRule'
          - 'events:DeleteRule'
          - 'events:PutTargets'
          - 'events:RemoveTargets'
          - 'logs:CreateLogGroup'
          - 'logs:DeleteLogGroup'
          - 'logs:DescribeLogGroups'
          - 'logs:PutRetentionPolicy'
          - 'logs:PutMetricFilter'
          - 'logs:DeleteMetricFilter'
          - 'cloudwatch:PutMetricAlarm'
          - 'cloudwatch:DeleteAlarms'
          - 'application-autoscaling:DescribeScalingPolicies'
          - 'application-autoscaling:DescribeScalableTargets'
          - 'application-autoscaling:RegisterScalableTarget'
          - 'application-autoscaling:DeregisterScalableTarget'
          - 'application-autoscaling:PutScalingPolicy'
          - 'application-autoscaling:DeleteScalingPolicy'
          - 's3:CreateBucket'
          - 's3:DeleteObject'
          - 's3:DeleteObjectVersion'
          - 's3:GetEncryptionConfiguration'
          - 's3:GetObject'
          - 's3:GetObjectVersion'
          - 's3:ListBucket'
          - 's3:ListBucketVersions'
          - 's3:PutEncryptionConfiguration'
          - 's3:PutObject'
          - 's3:DeleteBucket'
          - 'execute-api:Invoke'
          Resource: '*'
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Sub '10.0.0.0/16'
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  SubnetPublicA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Sub '10.0.0.0/20'
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
  SubnetPublicB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Sub '10.0.16.0/20'
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
  RouteTablePublicA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  RouteTablePublicB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  RouteTableAssociationPublicA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPublicA
      RouteTableId: !Ref RouteTablePublicA
  RouteTableAssociationPublicB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPublicB
      RouteTableId: !Ref RouteTablePublicB
  RoutePublicA:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublicA
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
  RoutePublicB:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublicB
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
  NetworkAclPublic:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
  SubnetNetworkAclAssociationPublicA:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref SubnetPublicA
      NetworkAclId: !Ref NetworkAclPublic
  SubnetNetworkAclAssociationPublicB:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref SubnetPublicB
      NetworkAclId: !Ref NetworkAclPublic
  NetworkAclEntryPublicAllowAllIn:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'
  NetworkAclEntryPublicAllowAllOut:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'
Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: 'VPC'
  DefaultSecurityGroup:
    Value: !GetAtt VPC.DefaultSecurityGroup
    Export:
      Name: VPC-DefaultSecurityGroup
  SubnetPublicA:
    Value: !Ref SubnetPublicA
    Export:
      Name: !Sub SubnetPublicA
  SubnetPublicB:
    Value: !Ref SubnetPublicB
    Export:
      Name: !Sub SubnetPublicB
  RouteTablePublicA:
    Value: !Ref RouteTablePublicA
    Export:
      Name: RouteTablePublicA
  RouteTablePublicB:
    Value: !Ref RouteTablePublicB
    Export:
      Name: RouteTablePublicB
